k8script/src/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
  labels:
    app: cbm-ocs-listener-srv
  name: cbm-ocs-listener-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cbm-ocs-listener-srv
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cbm-ocs-listener-srv
    spec:
      containers:
      - name: cbm-ocs-listener-srv-pod
        image: registry1.corpo.t-mobile.pl/cbm-ocs-listener/cbm-ocs-listener:0.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 1
            memory: 1G
