k8script/src/templates/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: cbm-ocs-listener-srv
  name: cbm-ocs-listener-srv
spec: 
  ports: 
    - 
      name: http
      port: 80
      protocol: TCP
      targetPort: 9000
  selector: 
    app: cbm-ocs-listener-srv
